fixed capybara image off center & updated preview

--- a/styles.css
+++ b/styles.css
@@ -8,32 +8,6 @@ ul {
     list-style: none;
 }
 
-header{
-    padding-top: 32px;
-    height: calc(120px + 32px);
-}
-
-header div{
-    width: 120px;
-    margin: auto;
-    background-image: linear-gradient(90deg, #e62ea8e4 0%, #4ecdf032 50.52%, #5948b6e1 100%);
-    
-    border-radius: 50%;
-    display: flex;
-    padding: 6px;
-}
-
-header div:hover{
-    transform: scale(1.1);
-    transition: all 800ms;
-
-}
-
-header img{
-    border-radius: 50%;
-    height: 100px;
-    width: 100px;
-}
 
 body {
     background-image: url(./assets/bg.jpg);
@@ -47,6 +21,38 @@ body * {
     font-family: 'Inter', sans-serif;
     line-height: 160%;
 }
+
+header{
+    padding-top: 32px;
+    height: calc(120px + 32px);
+}
+
+header div{
+    width: 120px;
+    margin: auto;
+    background-image: linear-gradient(90deg, #e62ea8e4 0%, #4ecdf032 50.52%, #5948b6e1 100%);
+    
+    border-radius: 50%;
+
+    display: flex;
+    padding: 4px;
+}
+
+header div a{
+    display: flex;
+}
+
+header div:hover{
+    transform: scale(1.1);
+    transition: all 800ms;
+
+}
+
+header img{
+    border-radius: 50%;
+    width: 100%;
+}
+
 
 main {
     max-width: 580px;
@@ -89,9 +95,6 @@ section ul {
     gap: 16px;
 
     margin-top: 32px;
-}
-
-section ul li{
 }
 
 section ul li:hover{
